@@ -1,4 +1,4 @@
-MANIFEST for ded, version t20050124
+MANIFEST for ded, version t20070325
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
