@@ -1,10 +1,12 @@
 #! /bin/sh
+# $Id: mkdirs.sh,v 12.5 2007/03/25 22:29:46 tom Exp $
+# -----------------------------------------------------------------------------
 # mkinstalldirs --- make directory hierarchy
 # Author: Noah Friedman <friedman@prep.ai.mit.edu>
 # Created: 1993-05-16
 # Last modified: 1994-03-25
 # Public domain
-#
+# -----------------------------------------------------------------------------
 
 errstatus=0
 umask 022
@@ -23,8 +25,20 @@ for file in ${1+"$@"} ; do
      if test ! -d "$pathcomp"; then
         echo "mkdir $pathcomp" 1>&2
         case "$pathcomp" in
-          [a-zA-Z]: )  ;;               # DOSISH systems
-          * )          mkdir "$pathcomp" || errstatus=$? ;;
+          [abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ]: )
+            ;;               # DOSISH systems
+          * )
+            mkdir "$pathcomp"
+            errstatus=$?
+            if test $errstatus != 0
+            then
+               # may have failed if invoked in a parallel "make -j# install"
+               if test -d "$pathcomp"
+               then
+                  errstatus=0
+               fi
+            fi
+            ;;
         esac
      fi
 
